--- a/test/bài 1/index.html
+++ b/test/bài 1/index.html
@@ -21,9 +21,8 @@
 
 <button id="result">Tính tổng</button>
 
-<h2 id="answer">Kết quả:</h2>
 
 
 </body>
-<script src="./app.js"></script>
+<script src="app.js"></script>
 </html>
